# bilinear-audio

./: .gitattributes  .gitignore  COPYING  Cargo.toml  README.md  bun.lockb  bunfig.toml  package.json
.github/actions/bootstrap/: action.yml
.github/workflows/: release.yml
rust/jx_alpha/component/: Cargo.toml
rust/jx_alpha/component/benches/: process.rs
rust/jx_alpha/component/src/: lib.rs  synth.rs
rust/jx_alpha/component/src/synth/: hpf.rs  lfo.rs  mod.rs  voice.rs
rust/jx_alpha/component/src/synth/voice/: env.rs  mod.rs  oscillators.rs  vcf.rs
rust/jx_alpha/component/src/synth/voice/oscillators/: and.rs  downsampler.rs  mod.rs  oscillator.rs  ring.rs  tests.rs
rust/jx_alpha/vst/: Cargo.toml  about.hbs
rust/jx_alpha/vst/src/: lib.rs
rust/p61/component/: Cargo.toml
rust/p61/component/benches/: process.rs
rust/p61/component/src/: lib.rs  synth.rs  tests.rs
rust/p61/component/src/synth/: mg.rs  osc_utils.rs  tests.rs  voice.rs
rust/p61/component/src/synth/env/: adsr.rs  duck.rs
rust/p61/component/src/synth/env/adsr/: tests.rs
rust/p61/component/src/synth/env/duck/: tests.rs
rust/p61/component/src/synth/mg/: tests.rs
rust/p61/component/src/synth/voice/: dco1.rs  dco2.rs  tests.rs  vca.rs  vcf.rs
rust/p61/component/src/synth/voice/dco1/: tests.rs
rust/p61/component/src/synth/voice/dco2/: tests.rs
rust/p61/component/src/synth/voice/vca/: tests.rs
rust/p61/component/src/synth/voice/vcf/: tests.rs
rust/p61/vst/: Cargo.toml  about.hbs
rust/p61/vst/src/: lib.rs
rust/rchorus/component/: Cargo.toml
rust/rchorus/component/benches/: process.rs
rust/rchorus/component/src/: anti_aliasing_filter.rs  compander.rs  effect.rs  kernel.rs  lfo.rs  lib.rs  modulated_delay.rs  polyphase_kernel.rs  tests.rs
rust/rchorus/component/src/compander/: tests.rs
rust/rchorus/component/src/effect/: tests.rs
rust/rchorus/component/src/lfo/: mod.rs
rust/rchorus/component/src/modulated_delay/: mod.rs  tests.rs
rust/rchorus/vst/: Cargo.toml  about.hbs
rust/rchorus/vst/src/: lib.rs
rust/reverb/component/: Cargo.toml
rust/reverb/component/benches/: process.rs
rust/reverb/component/src/: diffuser.rs  lib.rs  multi_channel_feedback_loop.rs  multi_channel_per_sample_delay.rs  per_sample_delay.rs  per_sample_modulated_delay.rs  reverb.rs  shuffler.rs  tests.rs
rust/reverb/component/src/diffuser/: mod.rs  tests.rs
rust/reverb/component/src/multi_channel_feedback_loop/: mod.rs  tests.rs
rust/reverb/component/src/multi_channel_per_sample_delay/: mod.rs  tests.rs
rust/reverb/component/src/per_sample_delay/: mod.rs  tests.rs
rust/reverb/component/src/per_sample_modulated_delay/: lfo.rs  mod.rs  tests.rs
rust/reverb/component/src/reverb/: mod.rs  tests.rs
rust/reverb/component/src/shuffler/: mod.rs  tests.rs
rust/reverb/vst/: Cargo.toml  about.hbs
rust/reverb/vst/src/: lib.rs
rust/shared/component_benchmarks/: Cargo.toml
rust/shared/component_benchmarks/src/: lib.rs
rust/shared/component_snapshots/: Cargo.toml
rust/shared/component_snapshots/src/: effect.rs  lib.rs  synth.rs
rust/shared/dsp/: Cargo.toml
rust/shared/dsp/src/: env.rs  f32.rs  iter.rs  lib.rs  look_behind.rs  sine_lfo.rs  slew.rs  slice_ops.rs  test_utils.rs
rust/shared/dsp/src/env/: adsr.rs  duck.rs
rust/shared/dsp/src/iir/: dc_blocker.rs  svf.rs
rust/shared/dsp/src/iir/dc_blocker/: mod.rs  tests.rs
rust/shared/dsp/src/iir/svf/: mod.rs  tests.rs
rust/shared/dsp/src/look_behind/: mod.rs
rust/shared/dsp/src/osc_utils/: mod.rs
rust/shared/iir/: Cargo.toml
rust/shared/poly/: Cargo.toml
rust/shared/poly/src/: lib.rs  state.rs
rust/shared/snapshots/: Cargo.toml
rust/shared/snapshots/src/: lib.rs
rust/shared/util/: Cargo.toml
rust/shared/util/src/: lib.rs
web/docs/: .eslintrc.cjs  .gitignore  astro.config.mjs  eslint.config.mjs  next.config.js  next.config.mjs  package.json  theme.config.tsx  tsconfig.json
web/docs/app/: layout.tsx
web/docs/app/[[...mdxPath]]/: page.tsx
web/docs/content/: _meta.ts  index.mdx
web/docs/content/docs/: _meta.ts  about.mdx  alpha-jx.mdx  p61.mdx  rchorus.mdx  reverb.mdx
web/docs/pages/: _meta.ts
web/docs/pages/docs/: about.mdx
web/docs/scripts/: convert-image-to-webp.ts  convert-mov-to-mp4.ts
web/docs/src/: build.test.ts  build.ts
web/docs/src/components/: Blob.tsx  CardHero.module.css  CardHero.tsx  ContentCard.module.css  ContentCard.tsx  DownloadButton.tsx  DownloadCard.module.css  DownloadCard.tsx  FeatureRow.module.css  FeatureRow.tsx  InfoCard.tsx  LinkButton.module.css  LinkButton.tsx  Nav.module.css  Nav.tsx  ProductCard.module.css  ProductCard.tsx  ProductCards.module.css  ProductCards.tsx  ProductHero.module.css  ProductHero.tsx  ProductSection.module.css  ProductSection.tsx  ProductShowcase.module.css  ProductShowcase.tsx  TypeTag.module.css  TypeTag.tsx
web/docs/src/data/: downloads.ts
web/docs/src/head/: index.tsx
web/docs/src/layouts/: Base.astro
web/docs/src/pages/: about.mdx  index.mdx
web/docs/src/plug-card/: index.module.css  index.tsx
web/docs/src/styles/: global.css
web/eslint-config-custom/: config.cjs  index.mjs  package.json
web/jx_alpha/: bundle.json  package.json
web/jx_alpha/src/: Layout.tsx  index.css  mock_infos.ts
web/jx_alpha/src/components/: Knob.tsx  (+16 more)
web/music-ui/: eslint.config.mjs  package.json  tsconfig.json  vite.config.ts
web/music-ui/.storybook/: example.css  main.ts  preview.ts
web/p61/: .eslintrc.cjs  bundle.json  eslint.config.mjs  package.json  tsconfig.json
web/p61/.storybook/: main.ts  preview.ts
web/p61/src/: mock_infos.ts
web/plugin-ui/: package.json  vite.config.ts
web/plugin-ui/src/: Knob.tsx  index.ts  useEnumSlider.ts  useGrabbed.ts  useKnob.ts
web/rchorus/: bundle.json  index.html  package.json  tsconfig.json
web/rchorus/src/: App.tsx  ModeProvider.tsx  Root.test.tsx  Root.tsx  Router.tsx  index.css  main.tsx  mock_infos.ts  mode.ts  preset.test.tsx  preset.ts
web/reverb/: bundle.json  package.json  vite.config.ts
web/reverb/src/: Layout.tsx  index.css  main.tsx  mock_infos.ts
web/tsconfig/: tsconfig.json
(+120 files in other folders)
