[workspace]
members = [
    "rust/p61/component",
    "rust/p61/vst",
    "rust/shared/snapshots",
    "rust/rchorus/vst",
    "rust/rchorus/component",
    "rust/shared/dsp",
    "rust/shared/component_benchmarks",
    "rust/shared/component_snapshots",
    "rust/reverb/component",
    "rust/reverb/vst",
]
resolver = "2"

[workspace.package]
rust-version = "1.84.1"

[workspace.lints.rustdoc]
private_doc_tests = "warn"
unescaped_backticks = "warn"

[workspace.lints.rust]
nonstandard_style = "warn"
rust_2018_idioms = "warn"
future_incompatible = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
type_complexity = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
default_trait_access = "allow"
