[package]
name = "jx_alpha_component"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
itertools.workspace = true
conformal_component.workspace = true
conformal_poly.workspace = true
rand_xoshiro.workspace = true
rand.workspace = true
num-derive.workspace = true
num-traits.workspace = true
dsp.workspace = true

[dev-dependencies]
snapshots.workspace = true
more-asserts.workspace = true
dsp = { workspace = true, features = ["test-utils"] }
assert_approx_eq.workspace = true
