[package]
name = "rchorus_component"
edition = "2021"
rust-version.workspace = true
license = "ISC"
publish = false

[dependencies]
num-traits = "0.2.19"
itertools = "0.13.0"
conformal_component = "0.3.3"
dsp = { path = "../../shared/dsp" }

[lints]
workspace = true

[dev-dependencies]
assert_approx_eq = "1.1.0"
more-asserts = "0.3.1"
snapshots = { path = "../../shared/snapshots" }
dsp = { path = "../../shared/dsp", features = ["test-utils"] }
component_benchmarks = { path = "../../shared/component_benchmarks" }
component_snapshots = { path = "../../shared/component_snapshots" }
criterion = "0.3"

[[bench]]
name = "process"
harness = false
