[package]
name = "rchorus_component"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
publish = false

[dependencies]
num-traits = "0.2.19"
num-derive = "0.4.2"
itertools = "0.13.0"
conformal_component = "0.3.4"
dsp = { path = "../../shared/dsp" }
rtsan-standalone = "0.1.1"

[lints]
workspace = true

[dev-dependencies]
assert_approx_eq = "1.1.0"
more-asserts = "0.3.1"
snapshots = { path = "../../shared/snapshots" }
dsp = { path = "../../shared/dsp", features = ["test-utils"] }
component_benchmarks = { path = "../../shared/component_benchmarks" }
component_snapshots = { path = "../../shared/component_snapshots" }
criterion = "0.3"

[features]
rtsan = ["rtsan-standalone/enable"]

[[bench]]
name = "process"
harness = false
