[package]
name = "rchorus_component"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
publish = false

[dependencies]
num-traits.workspace = true
num-derive.workspace = true
itertools.workspace = true
conformal_component.workspace = true
dsp.workspace = true
rtsan-standalone.workspace = true

[lints]
workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
more-asserts.workspace = true
snapshots.workspace = true
dsp = { workspace = true, features = ["test-utils"] }
component_benchmarks.workspace = true
component_snapshots.workspace = true
criterion.workspace = true

[features]
rtsan = ["rtsan-standalone/enable"]

[[bench]]
name = "process"
harness = false
