[package]
name = "reverb_component"
edition = "2021"
rust-version = "1.79.0"
publish = false

[dependencies]
bitvec = "1.0.1"
conformal_component = "0.3.2"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
dsp = { path = "../../shared/dsp" }
arrayvec = "0.7.6"

[dev-dependencies]
assert_approx_eq = "1.1.0"
snapshots = { path = "../../shared/snapshots" }
component_benchmarks = { path = "../../shared/component_benchmarks" }
dsp = { path = "../../shared/dsp", features = ["test-utils"] }
criterion = "0.3"

[[bench]]
name = "process"
harness = false
