[package]
name = "reverb_component"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bitvec.workspace = true
conformal_component.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
dsp.workspace = true
arrayvec.workspace = true
rtsan-standalone.workspace = true

[lints]
workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
snapshots.workspace = true
component_benchmarks.workspace = true
component_snapshots.workspace = true
dsp = { workspace = true, features = ["test-utils"] }
criterion.workspace = true

[features]
rtsan = ["rtsan-standalone/enable"]

[[bench]]
name = "process"
harness = false
