[package]
name = "component_benchmarks"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
publish = false

[lints]
workspace = true

[dependencies]
conformal_component = "0.3.4"
fxhash = "0.2.1"
serde = { version = "1.0.193", features = ["derive"] }
itertools = "0.13.0"
criterion = { version = "0.3" }
dsp = { path = "../dsp", features = ["test-utils"] }
