[package]
name = "component_benchmarks"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
publish = false

[lints]
workspace = true

[dependencies]
conformal_component.workspace = true
fxhash.workspace = true
serde.workspace = true
itertools.workspace = true
criterion.workspace = true
dsp = { workspace = true, features = ["test-utils"] }
