[package]
name = "dsp"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
publish = false

[lints]
workspace = true

[features]
test-utils = ["dep:rand", "dep:rand_xoshiro", "dep:realfft", "dep:num"]

[dependencies]
rand = { version = "0.8.5", optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }
realfft = { version = "3.5.0", optional = true }
num = { version = "0.4.3", optional = true }
num-traits = "0.2.19"

[dev-dependencies]
proptest = "1.8.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
realfft = "3.5.0"
num = "0.4.3"
assert_approx_eq = "1.1.0"
more-asserts = "0.3.1"
snapshots = { path = "../../shared/snapshots" }
