[package]
name = "dsp"
edition.workspace = true
rust-version.workspace = true
license = "ISC"
publish = false

[lints]
workspace = true

[features]
test-utils = ["dep:rand", "dep:rand_xoshiro", "dep:realfft", "dep:num"]

[dependencies]
rand = { workspace = true, optional = true }
rand_xoshiro = { workspace = true, optional = true }
realfft = { workspace = true, optional = true }
num = { workspace = true, optional = true }
num-traits.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
realfft.workspace = true
num.workspace = true
assert_approx_eq.workspace = true
more-asserts.workspace = true
snapshots.workspace = true
